--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!-- contador de visitas -->
 
-  <div id="sfcxp45qufx2nr3d2kjxtgf8ganbek9qqnc"></div><script type="text/javascript" src="https://counter11.stat.ovh/private/counter.js?c=xp45qufx2nr3d2kjxtgf8ganbek9qqnc&down=async" async></script><br><a href="https://www.contadorvisitasgratis.com">contador de visitas </a><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter11.stat.ovh/private/contadorvisitasgratis.php?c=xp45qufx2nr3d2kjxtgf8ganbek9qqnc" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
+  <div id="sfcxp45qufx2nr3d2kjxtgf8ganbek9qqnc"></div><script type="text/javascript" src="https://counter11.stat.ovh/private/counter.js?c=xp45qufx2nr3d2kjxtgf8ganbek9qqnc&down=async" async></script><br><a href="https://www.contadorvisitasgratis.com">visitas </a><noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter11.stat.ovh/private/contadorvisitasgratis.php?c=xp45qufx2nr3d2kjxtgf8ganbek9qqnc" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
 
 
 
