--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <li><a href="https://www.facebook.com/Casa-De-T%C3%A9-La-Media-Luna-1856438397722256" target="_blank" class="icon-facebook2"></a></li>
       <li><a href="" target="_blank" class="icon-twitter"></a></li>
       <li><a href="https://www.youtube.com/channel/UCE32NZjp5RhG_HEHK4Zi-sw/featured" target="_blank" class="icon-youtube"></a></li>
-      <li><a href="https://www.instagram.com/casadetelamedialuna/" target="_blank" class="icon-instagram"></a></li>
+      <li><a href="https://www.instagram.com/casadetelamedialuna/?hl=es-la" target="_blank" class="icon-instagram"></a></li>
     </ul>
   </div>
   <!--barra enlaces a redes sociales-->
